--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "profile-chart",
+  "name": "@water-byte/profile-chart",
   "version": "0.0.0",
-  "private": true,
+  "private": false,
+  "type": "module",
+  "license": "LGPL",
   "scripts": {
     "dev": "vite --host",
     "build": "run-p type-check \"build-only {@}\" --",
@@ -13,9 +15,6 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@antv/g": "^5.18.19",
-    "@antv/g-canvas": "^1.11.22",
-    "@antv/g-webgl": "^1.9.28",
     "@wuch96/utils": "^1.0.4",
     "d3": "^7.8.5",
     "lodash-es": "^4.17.21",
@@ -41,8 +40,32 @@
     "prettier": "^3.0.3",
     "typescript": "~5.2.0",
     "vite": "^4.4.11",
+    "vite-plugin-dts": "^3.6.3",
     "vitest": "^0.34.6",
     "vue": "^3.3.4",
     "vue-tsc": "^1.8.19"
+  },
+  "main": "./dist/profile-chart.umd.cjs ",
+  "module": "./dist/profile-chart.js",
+  "types": "./dist/types/mod.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/types/mod.d.ts",
+      "import": "./dist/profile-chart.js",
+      "require": "./dist/profile-chart.umd.cjs"
+    }
+  },
+  "homepage": "https://github.com/wch360119203/profile-chart",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wch360119203/profile-chart.git"
+  },
+  "files": [
+    "dist",
+    "src",
+    "package.json"
+  ],
+  "publishConfig": {
+    "access": "public"
   }
 }
